# ninjaUSB-util

./: .clang-format  .doxygen  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PIPELINE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: build-check.yml  ci.yml  copyright.yml  dependencies.yml  performance.yml  quality.yml  security.yml  weekly-maintenance.yml  weekly-security-scan.yml
doc/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_IMPROVEMENTS.md  PIPELINE.md  README.md  TESTING.md  USER_GUIDE.md  VERSIONING.md
src/: args.cpp  device_manager.cpp  logger.cpp  main.cpp
src/inc/: args.hpp  device_manager.hpp  exit_hotkey_detector.hpp  hid_keycodes.hpp  logger.hpp  test_framework.hpp  version.hpp  version.hpp.in
tests/: test_args.cpp  test_device_manager.cpp  test_hid_keycodes.cpp  test_hotkey_detector.cpp  test_logger.cpp  test_make_report_writer.cpp  test_signal_handler.cpp
